<resources>
    <string name="app_name">EasyPark</string>
    <string name="hint_padrao">Login</string>
    <string name="hint_padrao2">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="todo">TODO</string>
    <string name="hint_login" translatable="false">Login</string>
    <string name="hint_password" translatable="false">Senha</string>
    <string name="btn_login">Entrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_nome">Nome Completo</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
</resources>
