<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="156dp"
            android:layout_height="148dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_easypark" />

        <EditText
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_login"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryButton"
            android:text="Entrar"
            android:textColor="@color/colorTextBtn"
            tools:text="@string/btn_login"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/btnCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryButton"
            android:text="Entrar"
            android:textColor="@color/colorTextBtn"
            tools:text="@string/btn_login"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>