<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".activity.CadastroActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="156dp"
        android:layout_height="148dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo_easypark" />

    <EditText
        android:id="@+id/txtNomeCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:ems="10"
        android:hint="@string/hint_nome"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:typeface="normal" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:typeface="normal" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:hint="@string/hint_senha"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:typeface="normal"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTextBtn"
        android:text="Cadastrar"
        android:textSize="16sp"
        android:typeface="normal" />



</LinearLayout>